[package]
name = "romanconv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

hmap = "0.1.0"
anyhow = "1.0.13"
ansi_term = "0.12.1"
chrono = "0.4.19"
clap = { version = "3.2.5", features = ["derive"] }
curl = "0.4.43"
json = "0.11.13"
regex = "1.5.6"
numerals = "0.1"
rand = "0.8.5"
lazy_static = "1.4.0"