[package]
name = "romanconv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

hmap = "0.1.0"
anyhow = "1.0.13"
ansi_term = "0.12.1"
chrono = { version = "0.4.19", features = ["serde"] }
clap = { version = "3.2.5", features = ["derive"] }
curl = "0.4.43"
serde_json = "1.0.81"
regex = "1.5.6"
numerals = "0.1"
once_cell = "1.12.0"
rand = "0.8.5"
serde = { version = "1.0.137", features = ["derive"] }
serde_derive = "1.0.137"
lazy_static = "1.4.0"